# graphql-project

./: Cargo.toml  README.md  README_RUS.md  mysql-schema.sql
src/schemas/: root.rs  user.rs
