[package]
name = "graphql-project"
version = "1.0.0"
edition = "2018"

[dependencies]
ntex = { version = "0.5", features = ["tokio"] }
futures = "0.3"
juniper = "0.14"
mysql = "17"
r2d2 = "0.8"
r2d2_mysql = "17.0"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
